# Credit-card-fraud-detection

./: .gitattributes  .gitignore  Dockerfile  README.md  git_workflow.ipynb  pyproject.toml  requirements.txt
app/: main.py
notebooks/: eda.ipynb
