[tool.poetry]
name = "credit-card-fraud-detection"
version = "0.1.0"
description = "Credit Card Fraud Detection API"
authors = ["Your Name"]

[tool.poetry.dependencies]
python = "^3.8"
fastapi = "^0.68.0"
uvicorn = "^0.15.0"
numpy = "^1.21.0"
scikit-learn = "^0.24.2"
xgboost = "^1.4.2"
lightgbm = "^3.2.1"
tensorflow = "^2.6.0"
joblib = "^1.0.1"
pydantic = "^1.8.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
